cabal-version:       >=1.10
name:                ord-stref
version:             0.1.0.0
synopsis:            Wraps STRef and ST, extending their respective interfaces with Ord and (relatedly) per-thread unique symbol generation.
-- description:
homepage:            N/A
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              L. S. Leary
maintainer:          N/A
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.OSTRef
                     , Control.Monad.UST
                     , Control.Monad.Trans.UGenT
  -- other-modules:
  other-extensions:    GeneralisedNewtypeDeriving
                     , RankNTypes
  build-depends:       base >=4.9
                     , transformers
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
