cabal-version:       >=1.10
name:                ord-stref
version:             0.1.0.0
synopsis:            Wraps STRef and ST, extending their respective interfaces with Ord and (relatedly) per-thread unique symbol generation.
-- description:
homepage:            https://github.com/LSLeary/ord-stref
bug-reports:         https://github.com/LSLeary/ord-stref/issues
license:             BSD3
license-file:        LICENSE
author:              L. S. Leary
maintainer:          L.S.Leary.II@gmail.com
copyright:           2019 L. S. Leary
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.OSTRef
                     , Control.Monad.UST
                     , Control.Monad.Trans.UGenT
  -- other-modules:
  other-extensions:    GeneralisedNewtypeDeriving
                     , RankNTypes
  build-depends:       base >=4.9
                     , transformers
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
