cabal-version:       >=1.10
name:                ord-stref
version:             0.1.0.0
synopsis:            Ordered STRefs and USG in ST.
description:         Wraps @STRef@ and @ST@, extending their respective
                     interfaces with @Ord@ and unique symbol generation.
homepage:            https://github.com/LSLeary/ord-stref
bug-reports:         https://github.com/LSLeary/ord-stref/issues
license:             BSD3
license-file:        LICENSE
author:              L. S. Leary
maintainer:          L.S.Leary.II@gmail.com
copyright:           2019-2023 L. S. Leary
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC == 8.6.5 || == 9.4.3

source-repository head
  type:     git
  location: https://github.com/LSLeary/ord-stref

library
  exposed-modules:     Control.Monad.ST.USG
                     , Data.STRef.Ordered
  build-depends:       base         >=4.11  && <4.18
                     , transformers >=0     && <0.7
                     , primitive    >=0.6.4 && <0.9
  hs-source-dirs:      src
  default-language:    Haskell2010
